clusters/ocp/gateway-api/trusted-lan-http-redirect-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trusted-lan-http-redirect
  namespace: openshift-ingress
  annotations:
    argocd.argoproj.io/sync-wave: '2'
spec:
  parentRefs:
    - name: trusted-lan
      group: gateway.networking.k8s.io
      kind: Gateway
      sectionName: http
  hostnames:
    - '*.lan.igou.systems'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
